--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,59 @@
-telebot==0.0.5
-flask==2.3.3
-flask-socketio==5.3.4
-werkzeug==2.3.7
+# Core Dependencies
+Flask==2.3.3
+Flask-SocketIO==5.3.4
+Flask-SQLAlchemy==3.0.5
+Flask-Login==0.6.2
+Flask-WTF==1.1.1
+Flask-Cors==4.0.0
 python-dotenv==1.0.0
+gunicorn==21.2.0
+eventlet==0.33.3
+
+# Telegram Bot
+pyTelegramBotAPI==4.14.0
+
+# Database
+SQLAlchemy==2.0.23
+psycopg2-binary==2.9.9  # PostgreSQL for production
+aiosqlite==0.19.0       # SQLite for development
+
+# Utilities
+Werkzeug==2.3.7
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+itsdangerous==2.1.2
+click==8.1.7
+
+# Payment Processing
+stripe==7.2.0
+cryptography==41.0.7
+
+# Monitoring & Logging
+psutil==5.9.6
+prometheus-client==0.18.0
+python-json-logger==2.0.7
+loguru==0.7.2
+
+# Background Tasks
+celery==5.3.4
+redis==5.0.1
+
+# File Processing
+Pillow==10.1.0
+python-magic==0.4.27
+
+# API & Web
+requests==2.31.0
+aiohttp==3.8.6
+
+# Date & Time
+pytz==2023.3
+python-dateutil==2.8.2
+
+# Security
+bcrypt==4.1.1
+PyJWT==2.8.0
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
